Fixed bug #41374 (wholetext concats values of wrong nodes). add test

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@235580 c90b9560-bf6c-de11-be94-00142212c4b1