ext/dom/text.c
@@ -87,7 +87,7 @@ Since: DOM Level 3
 int dom_text_whole_text_read(dom_object *obj, zval **retval TSRMLS_DC)
 {
 	xmlNodePtr node;
-	xmlChar *wholetext;
+	xmlChar *wholetext = NULL;
 
 	node = dom_object_get_node(obj);
 
@@ -96,9 +96,23 @@ int dom_text_whole_text_read(dom_object *obj, zval **retval TSRMLS_DC)
 		return FAILURE;
 	}
 
+	/* Find starting text node */
+	while (node->prev && ((node->prev->type == XML_TEXT_NODE) || (node->prev->type == XML_CDATA_SECTION_NODE))) {
+		node = node->prev;
+	}
+
+	/* concatenate all adjacent text and cdata nodes */
+	while (node && ((node->type == XML_TEXT_NODE) || (node->type == XML_CDATA_SECTION_NODE))) {
+		wholetext = xmlStrcat(wholetext, node->content);
+		node = node->next;
+	}
+
 	ALLOC_ZVAL(*retval);
-	wholetext = xmlNodeListGetString(node->doc, node, 1);
-	ZVAL_XML_STRING(*retval, wholetext, ZSTR_DUPLICATE);
+	if (wholetext != NULL) {
+		ZVAL_XML_STRING(*retval, wholetext, ZSTR_DUPLICATE);
+	} else {
+		ZVAL_EMPTY_STRING(*retval);
+	}
 
 	xmlFree(wholetext);
 
